@@ -3,6 +3,7 @@
 # 2009-09-28 by J. Fox (renamed)
 # 2010-04-14 by J. Fox fixed error in reporting largest abs rstudent
 # 2012-12-12 by J. Fox fixed handling of labels argument
+# 2019-01002 by J. Fox added lmerMod method
 #-------------------------------------------------------------------------------
 
 # Bonferroni test for an outlier (J. Fox)
@@ -35,6 +36,10 @@ outlierTest.lm <- function(model, cutoff=0.05, n.max=10, order=TRUE, labels=name
 		}
 	class(result)<-"outlierTest"
 	result
+}
+
+outlierTest.lmerMod <- function(model, ...){
+  outlierTest.lm(model, ...)
 }
 
 print.outlierTest<-function(x, digits=5, ...){
